feat: Update project metadata and SEO for election portal
This commit updates the project name, description, and adds comprehensive SEO meta tags to the `index.html` file. It also refines the logos for the BNP and independent candidates in `constants.tsx` and renames the 'survey' tab to 'national' for clarity, reflecting the inclusion of national election results. The `GonovoteGuide` component data has been removed as it's no longer relevant.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bagerhat-4-election-management",
+  "name": "অধ্যক্ষ-মোঃ-আব্দুল-আলীম---বাগেরহাট-৪-নির্বাচনী-পোর্টাল",
   "private": true,
   "version": "0.0.0",
   "type": "module",
